Grace/tests/gibbs/errors/t251.grace
// ERROR = P1001
if(false) then {
}
elseif(true) then {
